[gd_scene load_steps=34 format=3 uid="uid://ctuwufdcx56yn"]

[ext_resource type="PackedScene" uid="uid://bctcp65yp8t3f" path="res://graphics/characters/godette/godette.glb" id="1_vxysh"]
[ext_resource type="Script" path="res://Scenes/entities/player/godette_skin.gd" id="2_toy6g"]
[ext_resource type="PackedScene" uid="uid://cp757r6txb0j6" path="res://graphics/weapons/sword_1handed.gltf" id="3_qbtud"]
[ext_resource type="Texture2D" uid="uid://cbf5176yt1e2d" path="res://graphics/weapons/barbarian_texture.png" id="4_wes7g"]
[ext_resource type="PackedScene" uid="uid://dydnnq3ww2uyk" path="res://graphics/weapons/shield.gltf.glb" id="5_d5l1m"]
[ext_resource type="PackedScene" uid="uid://02ix7c6cfe1u" path="res://graphics/weapons/wand.gltf" id="5_tl5wx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6tvnx"]
albedo_texture = ExtResource("4_wes7g")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_43nj6"]
albedo_texture = ExtResource("4_wes7g")

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qkxql"]
animation = &"Block"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_t4p70"]
filter_enabled = true
filters = [".", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r", "Rig/Skeleton3D:wrist.l", "Rig/Skeleton3D:wrist.r", "SecondAttackTimer"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eagl3"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fkqk7"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1e5xf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pjbqq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yo103"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bcg4p"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k7p58"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qw67a"]
states/Chop/node = SubResource("AnimationNodeAnimation_eagl3")
states/Chop/position = Vector2(370.5, 98.5)
states/End/position = Vector2(538, 99)
states/Slice/node = SubResource("AnimationNodeAnimation_fkqk7")
states/Slice/position = Vector2(372.25, 213)
states/Start/position = Vector2(210, 98.25)
transitions = ["Start", "Chop", SubResource("AnimationNodeStateMachineTransition_1e5xf"), "Chop", "Slice", SubResource("AnimationNodeStateMachineTransition_pjbqq"), "Slice", "Chop", SubResource("AnimationNodeStateMachineTransition_yo103"), "Chop", "End", SubResource("AnimationNodeStateMachineTransition_bcg4p"), "Slice", "End", SubResource("AnimationNodeStateMachineTransition_k7p58")]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_q8bgy"]
filter_enabled = true
filters = ["Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r", "Rig/Skeleton3D:wrist.l", "Rig/Skeleton3D:wrist.r"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4srox"]
animation = &"Spellcast_Shoot"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_so3eo"]
filter_enabled = true
filters = ["Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r", "Rig/Skeleton3D:wrist.l", "Rig/Skeleton3D:wrist.r"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_on5r7"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5iirs"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3bqtn"]
animation = &"Running_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4hv0e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4nggv"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kwjow"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ogoms"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a3gqm"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ub3t"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kqcrh"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_r383k"]
states/Idle/node = SubResource("AnimationNodeAnimation_on5r7")
states/Idle/position = Vector2(362.5, 99.75)
states/Jump_Idle/node = SubResource("AnimationNodeAnimation_5iirs")
states/Jump_Idle/position = Vector2(448.5, 224.5)
states/Running_B/node = SubResource("AnimationNodeAnimation_3bqtn")
states/Running_B/position = Vector2(528.5, 99.875)
states/Start/position = Vector2(209, 101.5)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_4hv0e"), "Idle", "Running_B", SubResource("AnimationNodeStateMachineTransition_4nggv"), "Running_B", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_kwjow"), "Jump_Idle", "Idle", SubResource("AnimationNodeStateMachineTransition_ogoms"), "Idle", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_a3gqm"), "Jump_Idle", "Running_B", SubResource("AnimationNodeStateMachineTransition_8ub3t"), "Running_B", "Idle", SubResource("AnimationNodeStateMachineTransition_kqcrh")]
graph_offset = Vector2(-20, 36)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_iw7b8"]
graph_offset = Vector2(-351.647, 61.999)
nodes/Animation/node = SubResource("AnimationNodeAnimation_qkxql")
nodes/Animation/position = Vector2(-310, 220)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_t4p70")
nodes/AttackOneShot/position = Vector2(130, 150)
nodes/AttackStateMachine/node = SubResource("AnimationNodeStateMachine_qw67a")
nodes/AttackStateMachine/position = Vector2(-110, 320)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_q8bgy")
nodes/Blend2/position = Vector2(-90, 100)
nodes/ExtraAnimation/node = SubResource("AnimationNodeAnimation_4srox")
nodes/ExtraAnimation/position = Vector2(380, 260)
nodes/ExtraOneShot/node = SubResource("AnimationNodeOneShot_so3eo")
nodes/ExtraOneShot/position = Vector2(620, 130)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_r383k")
nodes/MoveStateMachine/position = Vector2(-340, 60)
nodes/output/position = Vector2(830, 160)
node_connections = [&"AttackOneShot", 0, &"Blend2", &"AttackOneShot", 1, &"AttackStateMachine", &"Blend2", 0, &"MoveStateMachine", &"Blend2", 1, &"Animation", &"ExtraOneShot", 0, &"AttackOneShot", &"ExtraOneShot", 1, &"ExtraAnimation", &"output", 0, &"ExtraOneShot"]

[node name="GodetteSkin" instance=ExtResource("1_vxysh")]
script = ExtResource("2_toy6g")

[node name="Skeleton3D" parent="Rig" index="0"]
bones/1/position = Vector3(0, 0.36885, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, 0, 1)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.551237, -0.056491, -0.638124, 0.53455)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(3.01564e-08, -6.87984e-08, -0.515764, 0.856731)
bones/5/scale = Vector3(1, 0.999999, 1)
bones/6/rotation = Quaternion(1.44633e-08, 1.26672e-08, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.321268, -0.338935, 0.149668, 0.871498)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(0.00103976, 0.00103976, -0.703279, 0.710912)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/9/rotation = Quaternion(-0.609859, 0.0770336, 0.613692, 0.4955)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(2.38897e-08, 4.56234e-08, 0.538123, 0.842866)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-4.94614e-10, -1.45974e-08, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.32037, 0.31512, -0.231875, 0.862726)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(0.00325389, 0.00383261, 0.703717, 0.710462)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-5.80608e-11, -0.0313417, -1.88012e-09, 0.999509)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/15/rotation = Quaternion(0.989456, 0.0837773, 0.0788201, 0.0880047)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(0.397535, 6.23389e-08, -2.68556e-07, 0.917587)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-0.622831, -0.200669, 0.0772135, 0.752231)
bones/17/scale = Vector3(1, 1, 0.999999)
bones/18/rotation = Quaternion(-2.24322e-06, 0.920156, -0.391552, 5.90891e-07)
bones/18/scale = Vector3(1, 0.999998, 1)
bones/19/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/19/rotation = Quaternion(0.991289, -0.0334432, 0.0297743, 0.12386)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(0.441401, -5.81069e-08, 3.08227e-07, 0.89731)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(-0.648733, 0.112424, -0.0235877, 0.752297)
bones/21/scale = Vector3(1, 1, 0.999999)
bones/22/rotation = Quaternion(-8.93489e-05, 0.920222, -0.391398, 2.0291e-05)
bones/22/scale = Vector3(1, 0.999998, 1)
bones/23/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/24/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/24/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/25/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/26/position = Vector3(-2.60494e-08, 0.213436, -5.1715e-09)
bones/26/rotation = Quaternion(-1.01273e-07, 0.391084, 0.920355, -3.35091e-08)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(8.58988e-09, 0.16565, -2.40963e-09)
bones/27/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(1, -2.33136e-09, 1.99777e-07, -1.34211e-15)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(4.16335e-17, -6.74097e-17, -1.94669e-08, 1)
bones/30/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/31/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/32/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/33/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/33/rotation = Quaternion(-1.05795e-07, 0.391084, 0.920355, -2.58643e-08)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-6.31127e-09, 0.16565, 2.70696e-09)
bones/34/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(1, 3.76525e-09, 1.94879e-07, 7.45058e-09)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/38/position = Vector3(0.520841, 0.773915, -0.0576374)
bones/38/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/39/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/40/position = Vector3(-0.510844, 0.773915, 0.0597369)
bones/40/rotation = Quaternion(0.758253, 1.52737e-07, -0.651961, 1.11759e-08)
bones/40/scale = Vector3(1, 1, 1)

[node name="RightHandSlot" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="6"]
transform = Transform3D(0.00228647, -0.159784, -0.987149, -0.999953, -0.00954222, -0.000770787, -0.00929694, 0.987105, -0.159799, -0.490345, 0.627145, 0.1078)
bone_name = "handslot.r"
bone_idx = 13

[node name="sword_1handed2" parent="Rig/Skeleton3D/RightHandSlot" index="0" instance=ExtResource("3_qbtud")]

[node name="sword_1handed" parent="Rig/Skeleton3D/RightHandSlot/sword_1handed2" index="0"]
material_override = SubResource("StandardMaterial3D_6tvnx")

[node name="wand2" parent="Rig/Skeleton3D/RightHandSlot" index="1" instance=ExtResource("5_tl5wx")]

[node name="wand" parent="Rig/Skeleton3D/RightHandSlot/wand2" index="0"]
material_override = SubResource("StandardMaterial3D_43nj6")

[node name="LeftHandSlot" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="7"]
transform = Transform3D(7.76956e-07, 0.262863, 0.964833, 0.999936, -0.0107941, 0.00294103, 0.0111878, 0.964772, -0.262847, 0.507326, 0.622592, -0.0173254)
bone_name = "handslot.l"
bone_idx = 8

[node name="shield_gltf" parent="Rig/Skeleton3D/LeftHandSlot" index="0" instance=ExtResource("5_d5l1m")]
transform = Transform3D(1, -2.84217e-14, -2.02505e-13, -1.13687e-13, 1, -2.98023e-08, 2.84217e-14, 2.98023e-08, 1, -1.78814e-07, 0.0411478, 0.151031)

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "Idle"

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_iw7b8")
anim_player = NodePath("../AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/Blend2/blend_amount = 0.0
parameters/ExtraOneShot/active = false
parameters/ExtraOneShot/internal_active = false
parameters/ExtraOneShot/request = 0

[node name="SecondAttackTimer" type="Timer" parent="." index="3"]
wait_time = 0.5
one_shot = true

[editable path="Rig/Skeleton3D/RightHandSlot/sword_1handed2"]
[editable path="Rig/Skeleton3D/RightHandSlot/wand2"]
